iptables-export
# Generated by iptables-save v1.4.21 on Sat Jun 27 11:46:59 2020
*raw
:PREROUTING ACCEPT [927070:314980949]
:OUTPUT ACCEPT [985127:217131879]
COMMIT
# Completed on Sat Jun 27 11:46:59 2020
# Generated by iptables-save v1.4.21 on Sat Jun 27 11:46:59 2020
*nat
:PREROUTING ACCEPT [183496:9698360]
:POSTROUTING ACCEPT [22919:1443571]
:OUTPUT ACCEPT [22919:1443571]
-A OUTPUT -p tcp -m multiport --dports 25,465,587 -m owner --gid-owner 209 -j RETURN
-A OUTPUT -p tcp -m multiport --dports 25,465,587 -m owner --gid-owner 12 -j RETURN
-A OUTPUT -d 127.0.0.1/32 -p tcp -m multiport --dports 25,465,587 -m owner --uid-owner 201 -j RETURN
-A OUTPUT -p tcp -m multiport --dports 25,465,587 -m owner --uid-owner 0 -j RETURN
-A OUTPUT -p tcp -m multiport --dports 25,465,587 -j REDIRECT
COMMIT
# Completed on Sat Jun 27 11:46:59 2020
# Generated by iptables-save v1.4.21 on Sat Jun 27 11:46:59 2020
*mangle
:PREROUTING ACCEPT [927070:314980949]
:INPUT ACCEPT [927070:314980949]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [985127:217131879]
:POSTROUTING ACCEPT [985127:217131879]
COMMIT
# Completed on Sat Jun 27 11:46:59 2020
# Generated by iptables-save v1.4.21 on Sat Jun 27 11:46:59 2020
*filter
:INPUT ACCEPT [101591:14316630]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [124025:28056408]
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6001 -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 25,465,587 -m owner --gid-owner 209 -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 25,465,587 -m owner --gid-owner 12 -j ACCEPT
-A OUTPUT -d 127.0.0.1/32 -p tcp -m multiport --dports 25,465,587 -m owner --uid-owner 201 -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 25,465,587 -m owner --uid-owner 0 -j ACCEPT
COMMIT
# Completed on Sat Jun 27 11:46:59 2020
